--- a/dkr.html
+++ b/dkr.html
@@ -5,7 +5,7 @@ Dkr
 </title>
 </head>
 <body>
-<H1> Gadeget mart </H1>
+<H1> Dinuk </H1>
 <p> this is my first web page </p>
 <img src = "1.jpg">
 </body>
